title block and breadcrumb fine tuning on mobile and desktop, fixing impacts on map layout

--- a/src/UPS/VCGBundle/Resources/sass/components/_breadcrumbs.scss
+++ b/src/UPS/VCGBundle/Resources/sass/components/_breadcrumbs.scss
@@ -1,60 +1,38 @@
 // Thoughtbot Bitters Breadcrumbs
 
-.breadcrumb {
-    // @include position(absolute, -7.2em null null 2.2em);
-    @include position(absolute, -7em null null null);
-    // @include position(absolute, 0 null null 0);
-
-    z-index: 100;
-
-    &::before{
-        @include pseudo-block(2em);
-        width: 3000px;
-        left: -3000px;
-        background: rgba( $ups-yellow, 0.8 );
-        // border-right: 1px solid $ups-brown-1;
-    }
-/*
-    &::after{
-        font-family: FontAwesome;
-        content: "\f078";    
-        color: $ups-brown-1;
-        @include position( absolute, nul null 0.4em -1.62em);
-        z-index: 1000;
-    }*/
-    
-    .breakpoint-medium & {
-      top: -9em;
-    }
-
-    .breakpoint-small & {
-      top: 0;
-
-    }
-}
-
 .breadcrumb {   
   $base-border-color: gainsboro !default;
   $base-border-radius: 3px !default;
   $base-background-color: white !default;
 
-  // $base-spacing: 1.5em !default;
-  // $action-color: #477DCA !default;
-  // $base-link-color: $action-color !default;
-  // $medium-gray: #999 !default;
-  // $light-gray: #DDD !default;
-
-  // $medium-screen: em(640) !default;
-
   $breadcrumb-border-color: $base-border-color;
   $breadcrumb-border: 1px solid $breadcrumb-border-color;
-  $breadcrumb-height: 2em;
+  $breadcrumb-height: 1.8rem;
   $breadcrumb-arrow-color: $breadcrumb-border-color;
   $breadcrumb-background: $ups-yellow;
   $breadcrumb-inactive-hover-color: $black80;
   $breadcrumb-color: $ups-brown-1;
   $breadcrumb-color-hover: white;
   $breadcrumb-color-active: $breadcrumb-color;
+
+  @include position(absolute, -6.8em null null null);
+  z-index: 100;
+
+  &::before{
+      @include pseudo-block($breadcrumb-height);
+      width: 3000px;
+      left: -3000px;
+      background: rgba( $ups-yellow, 0.8 );
+  }
+  
+  .breakpoint-medium & {
+    top: -8.8em;
+  }
+
+  .breakpoint-small & {
+    top: 0;
+
+  }
 
   text-align: left;
 
@@ -64,36 +42,37 @@
     border-left: 0;
     border: none;
     color: $breadcrumb-color;
-    display: inline-block;
-    font-size: 1em;
+    display: block;
+    font-size: 0.9em;
     line-height: $breadcrumb-height;
-    margin-right: -5px;
+    // margin-right: -5px;
     padding: 0 ($breadcrumb-height / 4) 0 ($breadcrumb-height / 2);
     position: relative;
     text-decoration: none;
     border-bottom: none;
     border-top: none;
+    float: left;
 
     .breakpoint-small & {
       display: block;
       float: left;
       font-size: 0.7em;
-      border-bottom: 1px solid $grey--darker;
-      padding-left: 1.1em;
+      padding-left: 1.5em;
+      margin-bottom: 1px;
+    }
+
+    .breakpoint-medium &, .breakpoint-large &, .breakpoint-wide & {
+      height: $breadcrumb-height;
     }
 
 
     &:first-child {
-      // border-bottom-left-radius: $base-border-radius;
       border-left: none;
-      // border-top-left-radius: $base-border-radius;
       padding-left: $breadcrumb-height / 2;
     }
 
     &:last-child {
       background-color: $breadcrumb-background;
-      // border-bottom-right-radius: $base-border-radius;
-      // border-top-right-radius: $base-border-radius;
       color: $breadcrumb-color-active;
       padding-right: $breadcrumb-height / 2;
       border-right: none;
@@ -102,8 +81,8 @@
     &:focus,
     &:hover {
       background-color: lighten( $ups-yellow, 10% );
-      // color: $black;
     }
+
 
     &:after,
     &:before {
@@ -115,6 +94,11 @@
       display: block;
       margin: auto;
       z-index: 2;
+    }
+
+     &:focus::after,
+    &:hover::after {
+      border-left-color: lighten( $ups-yellow, 10% );
     }
 
     &:last-child:after,
@@ -134,15 +118,7 @@
     i {
       margin-right: 0.5em;
     }
-    // @include media($medium-screen) {
-    //   font-size: 1em;
-    //   padding: 0 ($breadcrumb-height / 2) 0 ($breadcrumb-height / 1.5);
-    // }
   }
-
-  // .breakpoint-small &, .breakpoint-medium &, .breakpoint-large &, .breakpoint-wide & {
-  //   display: inline-block;
-  // }
 }
 
 
